configure webpack sass and organize files

--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.26.1",
     "electron": "^1.4.13",
     "electron-contextmenu-middleware": "^1.0.2",
     "electron-input-menu": "^2.0.3",
     "events": "^1.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "flux": "^2.1.1",
     "fs": "0.0.1-security",
     "menu": "^0.2.5",
     "menubar": "^5.2.0",
+    "node-sass": "^4.1.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "resolve-url": "^0.2.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.16.2"
